<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="tv_hour">小时</string>
    <string name="tv_minute">分钟</string>
    <string name="tv_second">秒</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_clear">删除</string>
    <string name="tv_preset">预设时间名称</string>
    <string name="end_time_send">计时结束发送通知</string>
    <string name="end_time_title">计时结束</string>
    <string name="end_time_tip">计时时间已结束</string>
    <string name="new_notification">您有一条新通知</string>

    <!-- 菜品分类 -->
    <string name="tv_meat">肉类</string>
    <string name="tv_veg">蔬菜类</string>
</resources>
