<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_56"
    android:background="@color/color_94D1CA"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16">

    <LinearLayout
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_30"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:scaleType="centerCrop"
            android:src="@drawable/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_30"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_close" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_left_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/size_34px"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_weight="1"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/size_34px" />

    <!-- 首页 -->
    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/iv_voice"
            android:layout_width="@dimen/dp_30"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_voice" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_clock"
            android:layout_width="@dimen/dp_30"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_clock" />
        </LinearLayout>
    </LinearLayout>

    <!-- 详情页 -->
    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/iv_add"
            android:layout_width="@dimen/dp_30"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_edit"
            android:layout_width="@dimen/dp_30"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_edit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_clock2"
            android:layout_width="@dimen/dp_30"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_clock" />
        </LinearLayout>
    </LinearLayout>

    <!-- 提交按钮 -->
    <LinearLayout
        android:id="@+id/ll_submit"
        android:layout_width="@dimen/dp_40"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_check" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_34px" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_24"
            android:gravity="center"
            android:text="@string/tv_clear"
            android:textColor="@color/white"
            android:textSize="@dimen/size_34px" />
    </LinearLayout>
</LinearLayout>